app/assets/stylesheets/custom.css.scss
.row {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 1em;
  margin-bottom: 1em;
  max-width: 62.5rem;
}

p img {
 display: block; 
 margin-left: auto; 
 margin-right: auto;
 }

.panel {
border-style: solid;
border-width: 1px;
border-color: #30332D;
margin-bottom: 1.25rem;
padding: 1.25rem;
background: #3e423a;
}

.panel p {
color: #a4cfbe;
}

body {
  background-color: #6C6E58;
}

hr {
  border: solid #3E423A;
  border-width: 1px 0 0;
  clear: both;
  margin: 1.25rem 0 1.1875rem;
  height: 0;
}

h1, h2, h3, h4, h5, h6 {
  font-family: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
  font-weight: 300;
  font-style: normal;
  color: #F4F7D9;
  text-rendering: optimizeLegibility;
  margin-top: 0.2rem;
  margin-bottom: 0.5rem;
  line-height: 1.4;
}

A.class1 {color: #417378;}
A.class1:link  {text-decoration: none; color: #A4CFBE;}
A.class1:visited {text-decoration: none; color: #A4CFBE;}
A.class1:hover {text-decoration: underline; color: #A4CFBE;}
A.class1:active {text-decoration: none; color: #A4CFBE;}

label {
font-size: 0.875rem;
color: #A4CFBE;
cursor: pointer;
display: block;
font-weight: normal;
margin-bottom: 0.5rem;
}

button:hover, button:focus, .button:hover, .button:focus {
background-color: #417378;
}

h0 {
  font-size: 2.75rem;
  font-family: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
  font-weight: 300;
  font-style: normal;
  color: black;
  text-rendering: optimizeLegibility;
  margin-top: 0.2rem;
  margin-bottom: 0.5rem;
  line-height: 1.4;
}

